2000-09-25  Katsumi Yamaoka <yamaoka@jpl.org>

	* lisp/gnus-vers.el (gnus-revision-number): Increment to 05.

	* texi/gnus-faq-ja.texi, lisp/gnus.el, README.semi.ja, README.semi,
	README: Replace "<semi-gnus-*@meadow.scphys.kyoto-u.ac.jp>" with
	"<semi-gnus-*@meadowy.org>".

2000-09-22  TAKAHASHI Kaoru  <kaoru@kaisei.org>

	* lisp/ptexinfmt.el (texinfo-format-printindex): Add
	broken-facility check, for Mule for Windows.
	(texinfo-format-printindex): New function.

2000-09-19  Katsumi Yamaoka <yamaoka@jpl.org>

	* lisp/gnus-msg.el (gnus-copy-article-buffer): Encode bitmap
	smileys to ordinary text before removing any text properties.  It
	is synchronized with the latest smiley-mule.el.

2000-09-19  TSUCHIYA Masatoshi  <tsuchiya@pine.kuee.kyoto-u.ac.jp>

	* lisp/nnshimbun.el (nnshimbun-type-definition): Follow URL change
	of `ZDNet'.

2000-09-15   Daiki Ueno  <ueno@unixuser.org>

	* lisp/gnus-art.el: Always require `wid-edit'.

2000-09-14  Katsumi Yamaoka <yamaoka@jpl.org>

	* lisp/dgnushack.el (dgnushack-compile): Don't compile gnus-ml.el
	when FSFmacs is running.

	* lisp/gnus-ml.el: Bind some undeclared variables.

	* lisp/gnus-art.el (gnus-article-add-button): Add widget button.
	(gnus-article-display-mime-message): Don't set
	`mime-button-mother-dispatcher'.

	* lisp/message.el: Require `reporter' for the function
	`define-mail-user-agent' when Mule 2.3 is running.

2000-09-07  Tadashi Watanabe  <watanabe@sigmaitec.co.jp>

	* lisp/smiley.el (smiley-buffer, smiley-create-glyph): Work with
	GTK XEmacs as well.

2000-09-06  TSUCHIYA Masatoshi  <tsuchiya@pine.kuee.kyoto-u.ac.jp>

	* lisp/nnshimbun.el (nnshimbun-header-xref): New function.
	(nnshimbun-insert-header): Use `nnshimbun-header-xref', instead of
	`mail-header-xref'.
	(nnshimbun-make-mhonarc-contents): Took a measure against
	unexpected TAB characters.

2000-09-05  TSUCHIYA Masatoshi  <tsuchiya@pine.kuee.kyoto-u.ac.jp>

	* lisp/nnshimbun.el: Add `netbsd' support.