@@ -1,3 +1,8 @@
+2000-09-26  TAKAHASHI Kaoru  <kaoru@kaisei.org>
+
+	* lisp/ptexinfmt.el (texinfo-format-printindex): Use (featurep
+	'meadow) instead of `texinfmt-version'.
+
 2000-09-25  Katsumi Yamaoka <yamaoka@jpl.org>
 
 	* lisp/gnus-vers.el (gnus-revision-number): Increment to 05.
